Fixed hamburger not showing after second use issue.

--- a/src/styles/global/_header.scss
+++ b/src/styles/global/_header.scss
@@ -186,17 +186,20 @@
     // }
 
     &-items {
-      display: none;
+			display: flex;
+      visibility: hidden;
+			opacity: 0;
       position: fixed;
       left: 0;
       top: 0;
       right: 0;
       bottom: 0;
-      height: 100vh;
+      height: 95vh;
       width: 100vw;
       align-items: center;
       justify-content: center;
       flex-direction: column;
+			transition: 0.3s ease;
 
       .menu {
         list-style-type: none;
@@ -257,24 +260,26 @@
       // }
 
       .site-header__mobile-nav-items {
-        display: flex;
+				visibility: visible;
+				opacity: 1;
         position: relative;
         z-index: 2;
-        opacity: 0;
-        animation: fadeIn 1s ease;
-        animation-fill-mode: forwards;
-        animation-delay: 0.5s;
+				transition-delay: 0.3s;
+        // opacity: 0;
+        // animation: fadeIn 1s ease;
+        // animation-fill-mode: forwards;
+        // animation-delay: 0.5s;
       }
-
-      @keyframes fadeIn {
-        0% {opacity: 0;}
-        100% {opacity: 1;}
-      }
+			//
+      // @keyframes fadeIn {
+      //   0% {opacity: 0;}
+      //   100% {opacity: 1;}
+      // }
 
       .site-header__hamburger-button {
         position: absolute;
         right: 50px;
-        top: 47px;
+        top: 44px;
 
         @include breakpoint(mobile) {
           right: 20px;
